<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
           android:id="@+id/drawer_item_track_me"
           android:checked="false"
           android:icon="@drawable/ic_bullet_24dp"
           android:title="@string/drawer_item_track_me" />

        <item
           android:id="@+id/drawer_item_track_others"
           android:checked="false"
           android:icon="@drawable/ic_bullet_24dp"
           android:title="@string/drawer_item_track_othes" />

        <item
           android:id="@+id/drawer_item_users"
           android:checked="false"
           android:icon="@drawable/ic_bullet_24dp"
           android:title="@string/drawer_item_users" />

    </group>

</menu>